Replace javax.xml.bind.DatatypeConverter with java.util.Base64 for Java 9+ and Android compatibility